# libnsl1-stub

./: README.md  meson.build
include/: yp.h  ypclnt.h
src/: libnsl-ppc64.map  libnsl-x86_64.map  libnsl.map  xdr.c  ypclnt.c
